api-services minor rev
